--- a/janko-androidx-view/build.gradle
+++ b/janko-androidx-view/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
 
     sourceSets {
@@ -31,7 +31,7 @@ dependencies {
 publish {
     userOrg = 'bitsecho'
     groupId = 'com.bitsecho.janko'
-    artifactId = 'janko-androidx-layout'
+    artifactId = 'janko-androidx-view'
     publishVersion = '1.0.0'
     desc = 'A Kotlin DSL native Layout and native UI tools library with Androidx. Androidx Views.'
     website = 'https://github.com/BitsEcho/Janko'
